--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
         <div class="parallax-window" data-parallax="scroll" data-image-src="/image/night-view.jpg"></div>
         <div class="parallax-window" data-parallax="scroll" data-image-src="/image/night-view.jpg"></div>
         <div class="parallax-window" data-parallax="scroll" data-image-src="/image/night-view.jpg"></div>
+        <div class="parallax-window" data-parallax="scroll" data-image-src="/image/night-view.jpg"></div>
       </div>
     </div>
-
-
-
 
     <!--JS LINKS-->
     <script src="js/jquery_1.12.4_jquery.min.js"></script>
